# NFA-Regex-Engine

./: .gitignore  CMakeLists.txt  README.md  gen_cases.py  main.cpp
cases/: case_m2.in  case_s2.in  case_s3.in  case_s4.in  sample2.in
include/: automata.hpp  character_set.hpp  list.hpp  parser.hpp  reg_graph.hpp  regex.hpp  tokenizer.hpp  utility.hpp
input/: 1.txt
src/: automata.cpp  character_set.cpp  main.cpp  parser.cpp  reg_graph.cpp  regex.cpp  tokenizer.cpp
test/: alternation.txt  character_class.txt  quant.txt  usecases.txt
tmp/: tmp.txt
